                    script still doesn't compress by default.

2013-08-22  0.95    Added the -e / --edit option to edit cheat sheets.  Idea
                    borrowed from user evaryont (https://github.com/evaryont)

2014-01-25  0.96    Added an (perhaps less than elegant) update function to
                    the script.  Whatever works.

2014-01-26  0.97    Added unsafe update functionality and a man page.  Also
                    altered the way the script checks for cheat sheets; it's a
                    bit friendlier now.

2014-03-21  0.98    Added DEFAULT_CHEAT_DIR and CHEATPATH functionality, as well
                    as changing the behavior of -l and --list to list all cheat
                    sheets.  Added -L; does the same but with full paths.

2014-04-05  0.99    Addressed at least one, possibly two issues spotted by user
                    hkdobrev (help functionality issue, install issue).  Added a
                    temporary workaround for the third (cheat_sys_dir location)

2014-04-08  1.0     Fixed a serious bug with how the default CHEATPATH is set.
                    Also added a grepping feature.

2014-05-22  1.1     Fixed a small but embarassing bug -- specifically, the one
                    which meant you couldn't actually add files with the -a
                    option.  Also added capability to use viewers for image
                    files and PDFs; the CHEAT_IMAGE_VIEWER and CHEAT_PDF_VIEWER
                    environment variables are used for this, and if not found,
                    the script tries to find a handful of popular viewers on the
                    user's system instead.  Also added the ability to symlink
                    files rather than copying them to the cheat dir, should the
                    user so desire; this replaces the -l (list) option with -l
                    (link); if you want the old behavior, just use -k without
                    any options.